--- a/lib/l10n/intl_pl.arb
+++ b/lib/l10n/intl_pl.arb
@@ -1,4 +1,7 @@
 {
   "appTitle": "Optymalizacja interfejsu głosowego",
-  "settings": "Ustawienia"
+  "settings": "Ustawienia",
+  "english": "Angielski",
+  "polish": "Polski",
+  "appLanguage": "App language"
 }
