Add generating DropdownMenuItems

--- a/lib/l10n/intl_en.arb
+++ b/lib/l10n/intl_en.arb
@@ -1,7 +1,7 @@
 {
   "appTitle": "Voice interface optimization",
   "settings": "Settings",
+  "appLanguage": "App language",
   "english": "English",
-  "polish": "Polish",
-  "appLanguage": "App language"
+  "polish": "Polish"
 }
