--- a/lib/l10n/intl_pl.arb
+++ b/lib/l10n/intl_pl.arb
@@ -2,6 +2,6 @@
   "appTitle": "Optymalizacja interfejsu głosowego",
   "settings": "Ustawienia",
   "appLanguage": "Język aplikacji",
-  "english": "Angielski",
-  "polish": "Polski"
+  "en": "Angielski",
+  "pl": "Polski"
 }
