Add new messages

--- a/lib/l10n/intl_en.arb
+++ b/lib/l10n/intl_en.arb
@@ -3,5 +3,6 @@
   "settings": "Settings",
   "appLanguage": "App language",
   "en": "English",
-  "pl": "Polish"
+  "pl": "Polish",
+  "textsLanguage": "Texts language"
 }
