--- a/lib/l10n/intl_pl.arb
+++ b/lib/l10n/intl_pl.arb
@@ -3,5 +3,6 @@
   "settings": "Ustawienia",
   "appLanguage": "Język aplikacji",
   "en": "Angielski",
-  "pl": "Polski"
+  "pl": "Polski",
+  "textsLanguage": "Język tekstów"
 }
