Add l10n for menu options

--- a/lib/l10n/intl_en.arb
+++ b/lib/l10n/intl_en.arb
@@ -4,5 +4,7 @@
   "appLanguage": "App language",
   "en": "English",
   "pl": "Polish",
-  "textsLanguage": "Texts language"
+  "textsLanguage": "Texts language",
+  "customTextSpeaking": "Custom text speaking",
+  "predefinedTextSpeaking": "Predefined text speaking"
 }
