--- a/lib/l10n/intl_pl.arb
+++ b/lib/l10n/intl_pl.arb
@@ -4,5 +4,7 @@
   "appLanguage": "Język aplikacji",
   "en": "Angielski",
   "pl": "Polski",
-  "textsLanguage": "Język tekstów"
+  "textsLanguage": "Język tekstów",
+  "customTextSpeaking": "Odsłuchiwanie dowolnego tekstu",
+  "predefinedTextSpeaking": "Odsłuchiwanie predefiniowanego tekstu"
 }
