--- a/lib/l10n/intl_en.arb
+++ b/lib/l10n/intl_en.arb
@@ -6,5 +6,6 @@
   "pl": "Polish",
   "textsLanguage": "Texts language",
   "customTextSpeaking": "Custom text speaking",
-  "predefinedTextSpeaking": "Predefined text speaking"
+  "predefinedTextSpeaking": "Predefined text speaking",
+  "voiceRecognition": "Voice recognition"
 }
