Refactored LoginScreen and MenuScreen

--- a/lib/l10n/intl_en.arb
+++ b/lib/l10n/intl_en.arb
@@ -13,5 +13,6 @@
   "password": "Password",
   "loginAction": "Login",
   "registerAction": "Register",
-  "pleaseEnterSomeText": "Please enter some text"
+  "pleaseEnterSomeText": "Please enter some text",
+  "submit": "Submit"
 }
