Add remaining states to LoginScreen, fixed CustomTextSpeakingScreen

--- a/lib/l10n/intl_en.arb
+++ b/lib/l10n/intl_en.arb
@@ -15,5 +15,6 @@
   "loginAction": "Login",
   "registerAction": "Register",
   "pleaseEnterSomeText": "Please enter some text",
-  "submit": "Submit"
+  "submit": "Submit",
+  "somethingWentWrong": "Something went wrong"
 }
