--- a/lib/l10n/intl_pl.arb
+++ b/lib/l10n/intl_pl.arb
@@ -18,5 +18,6 @@
   "submit": "Wyślij",
   "somethingWentWrong": "Coś poszło nie tak",
   "accountCreatedSuccessfully": "Konto utworzono pomyślnie",
-  "serverIsDown": "Serwer jest wyłączony"
+  "serverIsDown": "Serwer jest wyłączony",
+  "masterThesis": "Praca magisterska"
 }
