Remove redundant code

--- a/lib/l10n/intl_en.arb
+++ b/lib/l10n/intl_en.arb
@@ -18,6 +18,5 @@
   "submit": "Submit",
   "somethingWentWrong": "Something went wrong",
   "accountCreatedSuccessfully": "Account created successfully",
-  "serverIsDown": "Server is down",
-  "masterThesis": "Master Thesis"
+  "serverIsDown": "Server is down"
 }
