--- a/lib/l10n/intl_pl.arb
+++ b/lib/l10n/intl_pl.arb
@@ -18,6 +18,5 @@
   "submit": "Wyślij",
   "somethingWentWrong": "Coś poszło nie tak",
   "accountCreatedSuccessfully": "Konto utworzono pomyślnie",
-  "serverIsDown": "Serwer jest wyłączony",
-  "masterThesis": "Praca magisterska"
+  "serverIsDown": "Serwer jest wyłączony"
 }
