--- a/lib/l10n/intl_pl.arb
+++ b/lib/l10n/intl_pl.arb
@@ -22,5 +22,7 @@
   "ttsTest": "Test zamiany tekstu na mowę",
   "previous": "Poprzedni",
   "next": "Następny",
-  "logOut": "Wyloguj się"
+  "logOut": "Wyloguj się",
+  "yes": "Tak",
+  "no": "Nie"
 }
