--- a/lib/l10n/intl_pl.arb
+++ b/lib/l10n/intl_pl.arb
@@ -26,5 +26,6 @@
   "yes": "Tak",
   "no": "Nie",
   "doYouWantToSendTheResults": "Czy chcesz wysłać wyniki?",
-  "thankYouForParticipatingInTheStudy": "Dziękuję za udział w badaniu"
+  "thankYouForParticipatingInTheStudy": "Dziękuję za udział w badaniu",
+  "youAreNotVerifiedYet": "Nie jesteś jeszcze zweryfikowany"
 }
