--- a/lib/l10n/intl_pl.arb
+++ b/lib/l10n/intl_pl.arb
@@ -27,5 +27,6 @@
   "no": "Nie",
   "doYouWantToSendTheResults": "Czy chcesz wysłać wyniki?",
   "thankYouForParticipatingInTheStudy": "Dziękuję za udział w badaniu",
-  "youAreNotVerifiedYet": "Nie jesteś jeszcze zweryfikowany"
+  "youAreNotVerifiedYet": "Nie jesteś jeszcze zweryfikowany",
+  "isTextClearlyAudible": "Czy tekst jest dobrze słyszalny?"
 }
