--- a/lib/l10n/intl_en.arb
+++ b/lib/l10n/intl_en.arb
@@ -20,6 +20,7 @@
   "accountCreatedSuccessfully": "Account created successfully",
   "serverIsDown": "Server is down",
   "ttsTest": "Text to speech test",
+  "sttTest": "Speech to text test",
   "previous": "Previous",
   "next": "Next",
   "logOut": "Log out",
