--- a/lib/l10n/intl_en.arb
+++ b/lib/l10n/intl_en.arb
@@ -19,8 +19,8 @@
   "somethingWentWrong": "Something went wrong",
   "accountCreatedSuccessfully": "Account created successfully",
   "serverIsDown": "Server is down",
-  "ttsTest": "Text to speech test",
-  "sttTest": "Speech to text test",
+  "ttsTest": "Text-to-Speech test",
+  "sttTest": "Speech-to-Text test",
   "previous": "Previous",
   "next": "Next",
   "logOut": "Log out",
@@ -30,6 +30,8 @@
   "thankYouForParticipatingInTheStudy": "Thank you for participating in the study",
   "youAreNotVerifiedYet": "You are not verified yet",
   "isTextClearlyAudible": "Click the button to play the text and check if the text is clearly audible",
-  "clickTheButtonToRecordTheVoice": "Click the button to record the voice",
-  "pleaseSetTheVolumeToMaximum": "Please set the volume to maximum"
+  "clickTheButtonToRecordTheVoice": "(Click the button to record the voice)",
+  "pleaseSetTheVolumeToMaximum": "Please set the volume to maximum",
+  "instruction": "Instruction",
+  "instructionContent": "The study consists of two tests that are available from the menu.\n\nIn the first test (Text-to-Speech Test), play the statement and then select whether it is clearly audible.\n\nIn the second test (Speech-to-Text Test), you should record the phrase written above the button. Press the microphone button to record your speech.\n\nAll steps must be completed to pass the test. The steps can be done in any order. If a test step is passed, a checkmark appears instead of the step number. After completing all steps, a button will appear allowing you to send the results."
 }
