--- a/lib/l10n/intl_en.arb
+++ b/lib/l10n/intl_en.arb
@@ -4,6 +4,7 @@
   "appLanguage": "App language",
   "en": "English",
   "pl": "Polish",
+  "fr": "French",
   "textsLanguage": "Texts language",
   "customTextSpeaking": "Custom text speaking",
   "predefinedTextSpeaking": "Predefined text speaking",
