--- a/lib/l10n/intl_pl.arb
+++ b/lib/l10n/intl_pl.arb
@@ -4,6 +4,7 @@
   "appLanguage": "Język aplikacji",
   "en": "Angielski",
   "pl": "Polski",
+  "fr": "Francuski",
   "textsLanguage": "Język tekstów",
   "customTextSpeaking": "Odsłuchiwanie dowolnego tekstu",
   "predefinedTextSpeaking": "Odsłuchiwanie predefiniowanego tekstu",
